--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
 </head>
-<body>
+<body bgcolor="green">
     <header>
     <h1>Contact Us</h1>
     <p>If you have any questions, feel free to reach out!</p>
@@ -34,4 +34,5 @@
 <p><b>Address:</b>  123 Example St, City, Country</p>
 <p>&copy; 2024 Example Company. All rights reserved.</p>
 </footer>
+
 </body>
